# gunagala

./: .coverage.subprocess  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: conf.py  index.rst
docs/gunagala/: index.rst
examples/: Australian Space Eye 2017.ipynb  Huntsman Telephoto Array.ipynb
gunagala/: __init__.py  _astropy_init.py  astroimsim.py  camera.py  config.py  conftest.py  filter.py  imager.py  optic.py  optical_filter.py  psf.py  signal_to_noise.py  sky.py
gunagala/data/: performance.yaml
gunagala/data/performance_data/: Thorlabs_Protected_Aluminum_Coating_12deg.csv  Thorlabs_Protected_Aluminum_Coating_45deg.csv  Thorlabs_Protected_Gold_Coating_12deg.csv  Thorlabs_Protected_Gold_Coating_45deg.csv  Thorlabs_Protected_Silver_Coating_12deg.csv  Thorlabs_Protected_Silver_Coating_45deg.csv  Thorlabs_Unprotected_Gold_Coating_45deg.csv  ZWO_ASI183MM_QE.csv  ase90_throughput.csv  cis115_QE_-40C.csv  cis115_QE_20C.csv
gunagala/tests/: coveragerc  test_camera.py  test_imager.py  test_optic.py  test_optical_filter.py  test_psf.py  test_signal_to_noise.py  test_sky.py  test_utils.py
gunagala/utils/: __init__.py  config.py
licenses/: LICENSE.rst
