[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = gunagala
description = Performance modelling for astronomical instruments,
long_description = This is a Python package from modelling the performance of astronomical instruments, including SNR/sensitivity limit/ETC calculations and simulating data.
author = Anthony Horton
author_email = ajh@aao.gov.au
license = BSD
url = https://github.com/AstroHuntsman/gunagala.git
edit_on_github = True
github_project = AstroHuntsman/gunagala
install_requires = astropy pyYAML
# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.0.dev

[entry_points]
