[metadata]
name = gunagala
author = Anthony Horton
author_email = anthony.horton@mq.edu.au
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/AstroHuntsman/gunagala.git
description = Performance modelling for astronomical instruments
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = AstroHuntsman/gunagala

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy>=4.02
    pyYAML
    numpy
    scipy
    matplotlib
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev0


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
gunagala =
    data/*.*
    data/performance_data/*
    data/sky_data/*


[tool:pytest]
testpaths = "gunagala" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts =
    --doctest-rst
    -p no:warnings

[coverage:run]
omit =
    gunagala/_astropy_init*
    gunagala/conftest.py
    gunagala/*setup_package*
    gunagala/tests/*
    gunagala/*/tests/*
    gunagala/extern/*
    gunagala/version*
    */gunagala/_astropy_init*
    */gunagala/conftest.py
    */gunagala/*setup_package*
    */gunagala/tests/*
    */gunagala/*/tests/*
    */gunagala/extern/*
    */gunagala/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_


[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1


[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select =
    E101
    W191
    W291
    W292
    W293
    W391
    E111
    E112
    E113
    E901
    E902
exclude =
    extern
    sphinx
    *parsetab.py
